--- a/Crawling/파이썬으로 웹 크롤러 만들기/Part1/Part1. Chapter4. 웹 크롤링 모델.ipynb
+++ b/Crawling/파이썬으로 웹 크롤러 만들기/Part1/Part1. Chapter4. 웹 크롤링 모델.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "71bec0b1",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "566b72f3",
    "metadata": {},
    "outputs": [
@@ -942,11 +942,29 @@
       "\n",
       "\n",
       "\n",
-      "Workforce Development\n",
-      "Understanding the skills gap—and what employers can do about it\n",
+      "Technology & Innovation\n",
+      "How artificial intelligence is transforming the world\n",
       "\n",
-      "Elizabeth Mann Levesque\n",
-      "Friday, December 6, 2019\n",
+      "Darrell M. West and John R. Allen\n",
+      "Tuesday, April 24, 2018\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "TechTank\n",
+      "Will robots and AI take your job? The economic and political consequences of automation\n",
+      "\n",
+      "Darrell M. West\n",
+      "Wednesday, April 18, 2018\n",
       "\n",
       "\n",
       "\n",
@@ -965,24 +983,6 @@
       "\n",
       "Makada Henry-Nickie\n",
       "Wednesday, November 8, 2017\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n",
-      "\n",
-      "\n",
-      "Report\n",
-      "Skills and opportunity pathways: Building an inclusive workforce for the future\n",
-      "\n",
-      "Makada Henry-Nickie and Hao Sun\n",
-      "Thursday, July 25, 2019\n",
       "\n",
       "\n",
       "\n",
@@ -4886,11 +4886,11 @@
       "\n",
       "\n",
       "\n",
-      "Up Front\n",
-      "The male college crisis is not just in enrollment, but completion\n",
+      "Brown Center Chalkboard\n",
+      "How our education system undermines gender equity\n",
       "\n",
-      "Richard V. Reeves and Ember Smith\n",
-      "Friday, October 8, 2021\n",
+      "Joseph Cimpian\n",
+      "Monday, April 23, 2018\n",
       "\n",
       "\n",
       "\n",
@@ -4904,11 +4904,11 @@
       "\n",
       "\n",
       "\n",
-      "TechTank\n",
-      "“Hidden Figures” highlights the ongoing legacy of women and minorities in STEM\n",
+      "Up Front\n",
+      "The male college crisis is not just in enrollment, but completion\n",
       "\n",
-      "Hillary Schaub\n",
-      "Wednesday, February 8, 2017\n",
+      "Richard V. Reeves and Ember Smith\n",
+      "Friday, October 8, 2021\n",
       "\n",
       "\n",
       "\n",
@@ -5171,8 +5171,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-b7e9d42331c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     58\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'GETTING INFO ABOUT: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtopic\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtargetSite\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msites\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m         \u001b[0mcrawler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtopic\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargetSite\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-12-b7e9d42331c9>\u001b[0m in \u001b[0;36msearch\u001b[1;34m(self, topic, site)\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0msearchResults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresultListing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msearchResults\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m             \u001b[0murl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresultUrl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattrs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m             \u001b[1;31m# 상대 URL인지 절대 URL인지 확인합니다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabsoluteUrl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-7-b7e9d42331c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     58\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'GETTING INFO ABOUT: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtopic\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtargetSite\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msites\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m         \u001b[0mcrawler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtopic\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargetSite\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-7-b7e9d42331c9>\u001b[0m in \u001b[0;36msearch\u001b[1;34m(self, topic, site)\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0msearchResults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresultListing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msearchResults\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m             \u001b[0murl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresultUrl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattrs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m             \u001b[1;31m# 상대 URL인지 절대 URL인지 확인합니다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabsoluteUrl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -5250,7 +5250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "79ef9a98",
    "metadata": {},
    "outputs": [],
@@ -5274,6 +5274,133 @@
     "        print(f'URL: {self.url}')\n",
     "        print(f'TITLE: {self.title}')\n",
     "        print(f'BODY:\\n{self.body}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4076eeb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "class Crawler:\n",
+    "    def __init__(self, site):\n",
+    "        self.site = site\n",
+    "        self.visited = []\n",
+    "        \n",
+    "    def getPage(self, url):\n",
+    "        try:\n",
+    "            req = requests.get(url)\n",
+    "        except requests.exceptions.RequestException:\n",
+    "            return None\n",
+    "        return BeautifulSoup(req.text, 'html.parser')\n",
+    "    \n",
+    "    def safeGet(self, pageObj, selector):\n",
+    "        selectedElems = pageObj.select(selector)\n",
+    "        if selectedElems is not None and len(selectedElems) > 0:\n",
+    "            return '\\n'.join([elem.get_text() for elem in selectedElems])\n",
+    "        return ''\n",
+    "    \n",
+    "    def parse(self, url):\n",
+    "        bs = self.getPage(url)\n",
+    "        if bs is not None:\n",
+    "            title = self.safeGet(bs, self.site.titleTag)\n",
+    "            body = self.safeGet(bs, self.site.bodyTag)\n",
+    "            if title != '' and body != '':\n",
+    "                content = Content(url, title, body)\n",
+    "                content.print()\n",
+    "                \n",
+    "    def crawl(self):\n",
+    "        \"\"\"\n",
+    "        사이트 홈페이지에서 페이지를 가져옵니다.\n",
+    "        \"\"\"\n",
+    "        bs = self.getPage(self.site.url)\n",
+    "        targetPages = bs.findAll('a', href = re.compile(self.site.targetPattern))\n",
+    "        for targetPage in targetPages:\n",
+    "            targetPage = targetPage.attrs['href']\n",
+    "            if targetPage not in self.visited:\n",
+    "                self.visited.append(targetPage)\n",
+    "                if not self.site.absoluteUrl:\n",
+    "                    targetPage = f'{self.site.url}{targetPage}'\n",
+    "                self.parse(targetPage)\n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "reuters = Website('Reuters',\n",
+    "                 'https://www.reuters.com',\n",
+    "                 '^(/article/)',\n",
+    "                 False,\n",
+    "                 'h1',\n",
+    "                 'div.StandardArticleBody_body')\n",
+    "\n",
+    "crawler = Crawler(reuters)\n",
+    "crawler.crawl()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d064bd99",
+   "metadata": {},
+   "source": [
+    "#### 4.3.3 여러 페이지 유형 크롤링"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c9043cd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 기본 웹사이트 속성에 pageType 추가\n",
+    "\n",
+    "class Website:\n",
+    "    \"\"\"Common base class for all articles/pages\"\"\"\n",
+    "    \n",
+    "    def __init__(self, type, name, url, searchUrl, resultListing, resultUrl, absoluteUrl, titleTag, bodyTag):\n",
+    "        self.name = name\n",
+    "        self.url = url\n",
+    "        self.searchUrl = searchUrl\n",
+    "        self.resultListing = resultListing\n",
+    "        self.resultUrl = resultUrl\n",
+    "        self.absoluteUrl = absoluteUrl\n",
+    "        self.titleTag = titleTag\n",
+    "        self.bodyTag = bodyTag\n",
+    "        self.pageType = pageType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dd1f18e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 하위 클래스 만들기\n",
+    "\n",
+    "class Website:\n",
+    "    \"\"\"Common base class for all articles/pages\"\"\"\n",
+    "    \n",
+    "    def __init__(self, name, url, titleTag):\n",
+    "        self.name = name\n",
+    "        self.url = url\n",
+    "        self.titleTage = titleTag\n",
+    "        \n",
+    "class Product(Website):\n",
+    "    \"\"\"제품 페이지 스크랩에 필요한 정보를 저장하는 클래스\"\"\"\n",
+    "    def __init__(self, name, url, titleTag, productNumberTag, priceTag):\n",
+    "        Website.__init__(self, name, url, titleTag)\n",
+    "        self.productNumberTag = ProductNumberTag\n",
+    "        self.priceTag = priceTag\n",
+    "        \n",
+    "class Article(Website):\n",
+    "    \"\"\"기사 페이지 스크랩에 필요한 정보를 저장하는 클래스\"\"\"\n",
+    "    def __init__(self, name, url, titleTag, bodyTag, dateTag):\n",
+    "        Website.__init__(self, name, url, titleTag)\n",
+    "        self.bodyTag = bodyTag\n",
+    "        self.dateTag = dateTag"
    ]
   }
  ],
