--- a/Crawling/파이썬으로 웹 크롤러 만들기/Part2/Part2. Chapter9. 자연어 읽고 쓰기.ipynb
+++ b/Crawling/파이썬으로 웹 크롤러 만들기/Part2/Part2. Chapter9. 자연어 읽고 쓰기.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dea78d0f",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "2dd69418",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I must reject the advancement of their own, it the larger share of protector of any agency of the early saw and the character of this seems to the complicated intrigues of an altogether different modes of the wants and affection. To a surrender of a case, whereas in that he has existed--does exist. Always the Constitution, and that of Athens to be adopted by the allies which now deliver, or, approving them, living with this error of the restricted grant to liberty, is no very strange, indeed, offer to that has produced at one of usury, it behooves the Government,\n"
+      "I believe to produce the chief confidence in the majority might become the respective orbits in the honor of interest, duty, at the judiciary, and restores the safe-keeping and maintain their fears. The danger is another can the decision of power is applied upon the extent of the public functionaries within its accomplishment. The first came from a reference to disfigure our fellow-citizens, this great alarm in one of legislation. They knew too hasty legislation and temporary deprivation is one of the sake of the circumstances have arisen as the delusion under a moment have entered for the head of the\n"
      ]
     }
    ],
@@ -224,6 +224,261 @@
     "    chain.append(newWord)\n",
     "    \n",
     "print(' '.join(chain))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd6b28ce",
+   "metadata": {},
+   "source": [
+    "## 9.3 자연어 툴킷"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7414620",
+   "metadata": {},
+   "source": [
+    "#### 9.3.1 설치"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a957dbc",
+   "metadata": {},
+   "source": [
+    "#### 9.3.2 NLTK를 사용한 통계적 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8d5ec9d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk import word_tokenize\n",
+    "from nltk import Text\n",
+    "\n",
+    "tokens = word_tokenize('Here is some not very interesting text')\n",
+    "text = Text(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cedd1ae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Introductory Examples for the NLTK Book ***\n",
+      "Loading text1, ..., text9 and sent1, ..., sent9\n",
+      "Type the name of the text or sentence to view it.\n",
+      "Type: 'texts()' or 'sents()' to list the materials.\n",
+      "text1: Moby Dick by Herman Melville 1851\n",
+      "text2: Sense and Sensibility by Jane Austen 1811\n",
+      "text3: The Book of Genesis\n",
+      "text4: Inaugural Address Corpus\n",
+      "text5: Chat Corpus\n",
+      "text6: Monty Python and the Holy Grail\n",
+      "text7: Wall Street Journal\n",
+      "text8: Personals Corpus\n",
+      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.book import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "be1cb6ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.833333333333333"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 평균 단어 사용 수\n",
+    "len(text6)/len(set(text6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2c6b6543",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(':', 1197),\n",
+       " ('.', 816),\n",
+       " ('!', 801),\n",
+       " (',', 731),\n",
+       " (\"'\", 421),\n",
+       " ('[', 319),\n",
+       " (']', 312),\n",
+       " ('the', 299),\n",
+       " ('I', 255),\n",
+       " ('ARTHUR', 225)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk import FreqDist\n",
+    "fdist = FreqDist(text6)\n",
+    "fdist.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6065a961",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk import bigrams\n",
+    "bigrams = bigrams(text6)\n",
+    "bigramDist = FreqDist(bigrams)\n",
+    "bigramDist[('Sir', 'Robin')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c145a6b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('coconut', 'and', 'you', \"'\")\n",
+      "('coconut', \"'\", 's', 'tropical')\n",
+      "('coconut', '?', 'ARTHUR', ':')\n",
+      "('coconut', '.', 'ARTHUR', ':')\n",
+      "('coconut', 'back', 'anyway', '...')\n",
+      "('coconut', 'on', 'a', 'line')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.book import *\n",
+    "from nltk import ngrams\n",
+    "fourgrams = ngrams(text6, 4)\n",
+    "\n",
+    "for fourgram in fourgrams:\n",
+    "    if fourgram[0] == 'coconut':\n",
+    "        print(fourgram)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1390a6d8",
+   "metadata": {},
+   "source": [
+    "#### 9.3.3 NLTK를 사용한 사전적 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "331ef66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Strange', 'JJ'), ('women', 'NNS'), ('lying', 'VBG'), ('in', 'IN'), ('pons', 'NNS'), ('distributing', 'VBG'), ('swords', 'NNS'), ('is', 'VBZ'), ('no', 'DT'), ('basis', 'NN'), ('for', 'IN'), ('a', 'DT'), ('system', 'NN'), ('of', 'IN'), ('goverment', 'NN'), ('.', '.')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.book import *\n",
+    "from nltk import word_tokenize\n",
+    "from nltk import pos_tag\n",
+    "\n",
+    "text = word_tokenize('Strange women lying in pons distributing swords is no basis for a system of goverment.')\n",
+    "words = pos_tag(text)\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e003decf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('The', 'DT'), ('dust', 'NN'), ('was', 'VBD'), ('thick', 'RB'), ('so', 'RB'), ('he', 'PRP'), ('had', 'VBD'), ('to', 'TO'), ('dust', 'VB')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = word_tokenize('The dust was thick so he had to dust')\n",
+    "words = pos_tag(text)\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2f5bca39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Google is one of the best companies in the world.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk import word_tokenize, sent_tokenize, pos_tag\n",
+    "sentences = sent_tokenize(\"Google is one of the best companies in the world. I constantly google myself to see what I'm up to.\")\n",
+    "nouns = ['NN', 'NNS', 'NNP', 'NNPS']\n",
+    "\n",
+    "for sentence in sentences:\n",
+    "    if 'google' in sentence.lower():\n",
+    "        taggeWords = pos_tag(word_tokenize(sentence))\n",
+    "        \n",
+    "        for word in taggeWords:\n",
+    "            if word[0].lower() == 'google' and word[1] in nouns:\n",
+    "                print(sentence)"
    ]
   }
  ],
